--- a/index.html
+++ b/index.html
@@ -18,20 +18,19 @@ Licensed to you under Creative Commons Attribution-NonCommercial-ShareAlike 3.0 
 	<link rel="openid2.local_id" href="http://www.google.com/profiles/divovich" />
 	<script language="javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js" type="text/javascript"></script>
 	<!-- Latest Tweet Loader -->
-<script language="javascript" src="http://ivoweb.net/javascripts/jquery.tweet.js" type="text/javascript"></script>
+<script language="javascript" src="http://ivoweb.net/javascripts/jquery.twitter.js" type="text/javascript"></script>
 <script type='text/javascript'>
 	$(document).ready(function(){
-		$("#tweet").tweet({
-			username: "danivovich",
-			join_text: " - ",
-			avatar_size: null,
-			count: 3,
-			auto_join_text_default: "<br/><br/>", 
-			auto_join_text_ed: "<br/><br/>", 
-			auto_join_text_ing: "<br/><br/>", 
-			auto_join_text_reply: "<br/><br/>", 
-			auto_join_text_url: "<br/><br/>", 
-			loading_text: "loading tweets..."
+		$("#tweet").getTwitter({
+			userName: "danivovich",
+			numTweets: 3,
+			loaderText: "Loading tweets...",
+			slideIn: false,
+			slideDuration: 0,
+			showHeading: false,
+			headingText: "Latest Tweets",
+			showProfileLink: false,
+			showTimestamp: true
 		});
 	});
 </script>
@@ -163,11 +162,12 @@ Licensed to you under Creative Commons Attribution-NonCommercial-ShareAlike 3.0 
 	<div style="clear: both;"></div>
 </div>
 <!-- Search Form End -->
-			<div class="block">
-	<div id="tweet">
-	</div>
-	<a class="block_source" href="http://twitter.com/danivovich/">twitter.com/danivovich</a>
+			<!-- Start About Me -->
+<div class="block">
+	<img src="http://ivoweb.net/images/me.jpg"><br/>
+	<a class="block_source" href="http://about.me/danivovich/">about.me/danivovich</a>
 </div>
+<!-- End About Me -->
 			<!-- StackExchange Badge -->
 <div class="block" style="padding-left: 10px;">
 	<a href="http://stackexchange.com" style="border-width: 0">
@@ -176,6 +176,11 @@ Licensed to you under Creative Commons Attribution-NonCommercial-ShareAlike 3.0 
 	<a class="block_source" href="http://careers.stackoverflow.com/danivovich">careers.stackoverflow.com/danivovich</a>
 </div>
 <!-- StackExchange Badge End -->
+			<div class="block">
+	<div id="tweet">
+	</div>
+	<a class="block_source" href="http://twitter.com/danivovich/">twitter.com/danivovich</a>
+</div>
 			<div class="block">
 	<!-- Start of Flickr Badge --> 
 	<style type="text/css"> 
@@ -210,8 +215,9 @@ Licensed to you under Creative Commons Attribution-NonCommercial-ShareAlike 3.0 
 </div>
 <div style="width: 33%; float: left;">
 	<h3>
-		<a href="http://ivoweb.net">Blog</a><br/>
+		<a href="http://ivoweb.net">Blog</a> - 
 		<a href="http://ivoweb.net/archive.html">Archive</a><br/>
+		<a href="http://ivoweb.net/reading.html">Reading</a> - 
 		<a href="http://ivoweb.net/articles/index.html">Articles</a>
 	</h3>
 </div>
