fix stackexchange profile link

--- a/archive.html
+++ b/archive.html
@@ -440,12 +440,13 @@ Licensed to you under Creative Commons Attribution-NonCommercial-ShareAlike 3.0 
 <!-- End About Me -->
       <!-- StackExchange Badge -->
 <div class="block" style="padding-left: 10px;">
-	<a href="http://stackexchange.com" style="border-width: 0">
+	<a href="http://stackexchange.com/users/9496/danivovich" style="border-width: 0">
 		<img src="http://stackexchange.com/users/flair/aef026e8d0414b3a9294030e3eef88f8.png?theme=clean" width="208" height="58" alt="combined Stack Exchange profile for danivovich" title="combined Stack Exchange profiles for danivovich">
 	</a>
 	<a class="block_source" href="http://careers.stackoverflow.com/danivovich">careers.stackoverflow.com/danivovich</a>
 </div>
 <!-- StackExchange Badge End -->
+
       <div class="block">
 	<div id="tweet">
 	</div>
